--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,13 @@
+
+
 .jumbotron {
   text-align: center;
 }
-.results {
-  display: none;
+.jumbotron h1 {
+  color: white;
+   text-shadow: 2px 8px 8px red;
+}
+button {
+  color: white;
+  background-color: red;
 }
