--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,49 @@
-
-
+body {
+color: white;
+text-shadow: 2px 2px 8px blue;
+}
 .jumbotron {
-  text-align: center;
+  opacity: 5%;
 }
-.jumbotron h1 {
-  color: white;
-   text-shadow: 2px 8px 8px red;
-}
+
+
 button {
   color: white;
   background-color: red;
 }
 #results {
   display: none;
+}
+
+.neonText {
+  text-align: center;
+  width: 100%;
+}
+.neonText h1 {
+  font-size: 60px;
+  font-weight: 600;
+  color: #fff;
+  text-shadow: 0px 0px 10px #78E0F2, 0px 0px 20px #78E0F2, 0px 0px 30px #78E0F2, 0px 0px 40px #78E0F2, 0px 0px 50px #78E0F2;
+}
+.neonText h1 span:nth-child(2) {
+  text-shadow: 0px 0px 10px #FC88A8, 0px 0px 20px #FC88A8, 0px 0px 30px #FC88A8, 0px 0px 40px #FC88A8, 0px 0px 50px #FC88A8;
+}
+.neonText h1 span:nth-child(1) {
+  animation: flash 2s infinite ease-in 0.5s;
+}
+
+@keyframes flash {
+  0% {
+    text-shadow: 0px 0px 10px #78E0F2, 0px 0px 20px #78E0F2, 0px 0px 30px #78E0F2, 0px 0px 40px #78E0F2, 0px 0px 50px #78E0F2;
+  }
+  25% {
+    text-shadow: 0px 0px 10px #78E0F2, 0px 0px 20px #78E0F2, 0px 0px 30px #78E0F2, 0px 0px 40px #78E0F2, 0px 0px 50px #78E0F2;
+  }
+  50% {
+    text-shadow: 0px 0px 10px #78E0F2;
+  }
+  100% {
+    color: rgba(255, 255, 255, 0.2);
+    text-shadow: 0px 0px 0px rgba(255, 255, 255, 0.2);
+  }
 }
