--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,10 @@
 body {
 color: white;
-text-shadow: 2px 2px 8px blue;
+text-shadow: 2px 2px 8px red;
 }
 .jumbotron {
-  opacity: 5%;
+  background: rgba(255,255,255,0);
 }
-
-
 button {
   color: white;
   background-color: red;
